--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "1.19.3",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
+    "popper.js": "1.16.0",
     "pug": "2.0.4",
     "xml2js": "0.4.22"
   },
